# organized-concatenate-gitignore

./: LICENSE  README.md  pyproject.toml
