[tool.poetry]
name = "unique-gitignore"
version = "0.1.0"
description = "Creates a .gitignore file of multiple possible .gitignore templates"
authors = ["FuexFollets <fuex9follets@gmail.com>"]
license = "MIT License"

[tool.poetry.dependencies]
python = "^3.9"
pip = "^22.2.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
